CSS to prevent stretching
Add CSS to change grid defaults and stop CSS
stretching.

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,13 @@ body{
     flex-direction: column;
 }
 
+#mainForm{
+    display: grid;
+    grid-template-columns: 80px 150px;
+    grid-auto-rows: 40px;
+}
+
+#mainForm > * {
+    align-self: start;  /* Stops vertical stretching */
+    justify-self: start; /* Stops horizontal stretching */
+}
